fix overflow problem when cards are hovered

--- a/src/components/HomePage/Home.module.css
+++ b/src/components/HomePage/Home.module.css
@@ -79,6 +79,5 @@
 .content {
   display: flex;
   flex-direction: column;
-  overflow-x: auto;
   gap: 3rem;
 }
